archive/infrastructure/deployments/mesh-deployment/staging/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mesh-stg
  namespace: mesh-stg
  labels:
    app: mesh-stg
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 2000
    protocol: TCP
    name: http
  selector:
    app: mesh-stg
